refs #main Users search and update implementation commit
