# docs/swagger.yaml
@@ -157,15 +157,25 @@ definitions:
     type: object
   UserUpdateReq:
     properties:
+      active_status:
+        type: boolean
+      avatar_url:
+        type: string
+      dept_id:
+        type: string
       email:
         type: string
       first_name:
         maxLength: 100
         minLength: 2
         type: string
+      group_id:
+        type: string
       last_name:
         maxLength: 100
         minLength: 2
+        type: string
+      org_id:
         type: string
       role:
         type: string
@@ -592,6 +602,40 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: get all user details
+      tags:
+      - auth
+  /api/auth/users/search:
+    get:
+      description: Get users detail based on search query
+      parameters:
+      - description: Organization ID
+        in: query
+        name: org_id
+        type: string
+      - description: Department ID
+        in: query
+        name: dept_id
+        type: string
+      - description: Group ID
+        in: query
+        name: group_id
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/User'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/Error'
+      security:
+      - ApiKeyAuth: []
+      summary: get users detail based on search query
       tags:
       - auth
   /api/channel/:
